add new satellites, fix bug

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ drawings/
 
 # Папка с циркулярами из gcn
 circulars/
+
+# Папка с подтвержденными гамма-всплесками
+GRBs/
+
+# Папка с кандидатами в гамма-всплески
+possible_drawings/
